--- a/src/org/thinkit/githubpages/css/index.css
+++ b/src/org/thinkit/githubpages/css/index.css
@@ -360,15 +360,31 @@ ol {
   padding: 0px;
 }
 
+#copyright {
+  background-color: #2c3039;
+  text-align: center;
+}
+
 #copyright p {
   width: 100%;
   padding: 30px 0px 30px 0px;
-  background-color: #2c3039;
   text-align: center;
   font-size: 13px;
   letter-spacing: 1px;
   color: #ffffff;
   margin: 0px;
+}
+
+#copyright .social-links {
+  margin-bottom: 10px;
+}
+
+#copyright .social-links a {
+  color: #ffffff !important;
+}
+
+#copyright .social-links a:hover {
+  color: #e31b6d !important;
 }
 
 /*---------------------
