--- a/src/org/thinkit/web/css/preloader.css
+++ b/src/org/thinkit/web/css/preloader.css
@@ -1,17 +1,16 @@
 /*
-  Copyright 2020 Kato Shinya.
-
-  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
-  in compliance with the License. You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software distributed under the License
-  is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
-  or implied. See the License for the specific language governing permissions and limitations under
-  the License.
-*/
-
+ * Copyright 2020 Kato Shinya.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
+ * in compliance with the License. You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software distributed under the License
+ * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+ * or implied. See the License for the specific language governing permissions and limitations under
+ * the License.
+ */
 #preloder {
   position: fixed;
   width: 100%;
@@ -22,7 +21,7 @@
   background: #2c3039;
 }
 
-.loader {
+#preloder .loader {
   width: 40px;
   height: 40px;
   position: absolute;
@@ -73,3 +72,4 @@
     border-left-color: transparent;
   }
 }
+/*# sourceMappingURL=preloader.css.map */
