--- a/src/org/thinkit/web/css/barfiller.css
+++ b/src/org/thinkit/web/css/barfiller.css
@@ -1,22 +1,21 @@
 /*
-  Copyright 2020 Kato Shinya.
-
-  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
-  in compliance with the License. You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software distributed under the License
-  is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
-  or implied. See the License for the specific language governing permissions and limitations under
-  the License.
-*/
-
-.skill-bar-item {
+ * Copyright 2020 Kato Shinya.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
+ * in compliance with the License. You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software distributed under the License
+ * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+ * or implied. See the License for the specific language governing permissions and limitations under
+ * the License.
+ */
+#skill-bars .skill-bar-item {
   margin-top: 10px;
 }
 
-.skill-bar-item p {
+#skill-bars .skill-bar-item p {
   font-size: 15px;
   font-weight: 500;
   font-style: italic;
@@ -24,7 +23,7 @@
   margin-bottom: 10px;
 }
 
-.skill-bar-item .barfiller {
+#skill-bars .skill-bar-item .barfiller {
   width: 100%;
   height: 5px;
   background: rgba(255, 255, 255, 0.2);
@@ -34,7 +33,7 @@
   box-shadow: none;
 }
 
-.skill-bar-item .barfiller .tip {
+#skill-bars .skill-bar-item .barfiller .tip {
   margin-top: -32px;
   padding: 0;
   font-size: 15px;
@@ -42,22 +41,23 @@
   background: transparent;
 }
 
-.skill-bar-item .barfiller .tip:after {
+#skill-bars .skill-bar-item .barfiller .tip:after {
   display: none;
 }
 
-.barfiller {
+#skill-bars .barfiller {
   width: 100%;
   height: 12px;
   background: #fcfcfc;
   border: 1px solid #ccc;
   position: relative;
   margin-bottom: 20px;
-  box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
+          box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
 }
 
-.barfiller .fill {
+#skill-bars .barfiller .fill {
   display: block;
   position: relative;
   width: 0px;
@@ -66,11 +66,11 @@
   z-index: 1;
 }
 
-.barfiller .tipWrap {
+#skill-bars .barfiller .tipWrap {
   display: none;
 }
 
-.barfiller .tip {
+#skill-bars .barfiller .tip {
   margin-top: -30px;
   padding: 2px 4px;
   font-size: 11px;
@@ -81,7 +81,7 @@
   background: #333;
 }
 
-.barfiller .tip:after {
+#skill-bars .barfiller .tip:after {
   border: solid;
   border-color: rgba(0, 0, 0, 0.8) transparent;
   border-width: 6px 6px 0 6px;
@@ -92,3 +92,4 @@
   top: 100%;
   z-index: 9;
 }
+/*# sourceMappingURL=barfiller.css.map */
